[tool.poetry]
name = "cat_tracker"
version = "0.1.0"
description = "Spying on my cat"
authors = ["Lena Bartell"]
repository = "https://github.com/lbartell/cat_tracker"
readme = "README.md"
include = ["pyproject.toml"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
mypy = "^0.720"
pytest = "^5.1"
pytest-cov = "^2.7"
pytest-black = "^0.3"
pytest-mypy = "^0.4"

[build-system]
requires = ["poetry>=0.12"]